--- a/checkout.html
+++ b/checkout.html
@@ -114,10 +114,10 @@
 		<!-- Social -->
 		<div class="header_social">
 			<ul>
-				<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-				<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-				<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-				<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+				<li><a href="https://www.pinterest.com/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+				<li><a href="https://www.instagram.com/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+				<li><a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+				<li><a href="https://twitter.com/"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 			</ul>
 		</div>
 	</header>
@@ -164,10 +164,10 @@
 
 		<div class="menu_social">
 			<ul>
-				<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-				<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-				<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-				<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+				<li><a href="https://www.pinterest.com/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+				<li><a href="https://www.instagram.com/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+				<li><a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+				<li><a href="https://twitter.com/"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 			</ul>
 		</div>
 	</div>
@@ -224,73 +224,72 @@
 								</div>
 								<div>
 									<!-- Company -->
-									<label for="checkout_company">Company</label>
+									<label for="checkout_company">Компания</label>
 									<input type="text" id="checkout_company" class="checkout_input">
 								</div>
 								<div>
 									<!-- Country -->
-									<label for="checkout_country">Country*</label>
+									<label for="checkout_country">Страна*</label>
 									<select name="checkout_country" id="checkout_country" class="dropdown_item_select checkout_input" require="required">
 										<option></option>
-										<option>Lithuania</option>
-										<option>Sweden</option>
-										<option>UK</option>
-										<option>Italy</option>
+										<option>Россия</option>
+										<option>Украина</option>
+										<option>EU</option>
 									</select>
 								</div>
 								<div>
 									<!-- Address -->
-									<label for="checkout_address">Address*</label>
+									<label for="checkout_address">Адрес*</label>
 									<input type="text" id="checkout_address" class="checkout_input" required="required">
 									<input type="text" id="checkout_address_2" class="checkout_input checkout_address_2" required="required">
 								</div>
 								<div>
 									<!-- Zipcode -->
-									<label for="checkout_zipcode">Zipcode*</label>
+									<label for="checkout_zipcode">Почтовый индекс*</label>
 									<input type="text" id="checkout_zipcode" class="checkout_input" required="required">
 								</div>
 								<div>
 									<!-- City / Town -->
-									<label for="checkout_city">City/Town*</label>
+									<label for="checkout_city">Город*</label>
 									<select name="checkout_city" id="checkout_city" class="dropdown_item_select checkout_input" require="required">
 										<option></option>
-										<option>City</option>
-										<option>City</option>
-										<option>City</option>
-										<option>City</option>
+										<option>Город</option>
+										<option>Город</option>
+										<option>Город</option>
+										<option>Город</option>
 									</select>
 								</div>
 								<div>
 									<!-- Province -->
-									<label for="checkout_province">Province*</label>
+									<label for="checkout_province">Провинция*</label>
 									<select name="checkout_province" id="checkout_province" class="dropdown_item_select checkout_input" require="required">
 										<option></option>
-										<option>Province</option>
-										<option>Province</option>
-										<option>Province</option>
-										<option>Province</option>
+										<option>Провинция</option>
+										<option>Провинция</option>
+										<option>Провинция</option>
+										<option>Провинция</option>
 									</select>
 								</div>
 								<div>
 									<!-- Phone no -->
-									<label for="checkout_phone">Phone no*</label>
+									<label for="checkout_phone">Номер телефона*</label>
 									<input type="phone" id="checkout_phone" class="checkout_input" required="required">
 								</div>
 								<div>
 									<!-- Email -->
-									<label for="checkout_email">Email Address*</label>
+									<label for="checkout_email">Адрес электронной почты*</label>
 									<input type="phone" id="checkout_email" class="checkout_input" required="required">
 								</div>
 								<div class="checkout_extra">
 									<div>
 										<input type="checkbox" id="checkbox_terms" name="regular_checkbox" class="regular_checkbox" checked="checked">
 										<label for="checkbox_terms"><img src="images/check.png" alt=""></label>
-										<span class="checkbox_title">Terms and conditions</span>
+										<span class="checkbox_title">Условия и положения</span>
 									</div>
 									<div>
 										<input type="checkbox" id="checkbox_account" name="regular_checkbox" class="regular_checkbox">
 										<label for="checkbox_account"><img src="images/check.png" alt=""></label>
-										<span class="checkbox_title">Create an account</span>
+										<span class="checkbox_title">Завести аккаунт</span>
 									</div>
 									<div>
 										<input type="checkbox" id="checkbox_newsletter" name="regular_checkbox" class="regular_checkbox">
