--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
 						<div class="product">
 							<div class="product_image"><img src="images/product_1.jpg" alt=""></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Смартфон</a></div>
-								<div class="product_price">$670</div>
+								<div class="product_title"><a href="product.html">Одностраничный сайт</a></div>
+								<div class="product_price">₽30,000</div>
 							</div>
 						</div>
 
@@ -253,62 +253,17 @@
 						<div class="product">
 							<div class="product_image"><img src="images/product_2.jpg" alt=""></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Смартфон</a></div>
-								<div class="product_price">$670</div>
+								<div class="product_title"><a href="product.html">Многостраничный сайт</a></div>
+								<div class="product_price">₽60,000</div>
 							</div>
 						</div>
 
 						<!-- Product -->
 						<div class="product">
-							<div class="product_image"><img src="images/product_3.jpg" alt=""></div>
+							<div class="product_image"><img src="images/product_2.jpg" alt=""></div>
 							<div class="product_content">
-								<div class="product_title"><a href="product.html">Смартфон</a></div>
-								<div class="product_price">$670</div>
-							</div>
-						</div>
-
-						<!-- Product -->
-						<div class="product">
-							<div class="product_image"><img src="images/product_4.jpg" alt=""></div>
-							<div class="product_content">
-								<div class="product_title"><a href="product.html">Смартфон</a></div>
-								<div class="product_price">$670</div>
-							</div>
-						</div>
-
-						<!-- Product -->
-						<div class="product">
-							<div class="product_image"><img src="images/product_5.jpg" alt=""></div>
-							<div class="product_content">
-								<div class="product_title"><a href="product.html">Смартфон</a></div>
-								<div class="product_price">$670</div>
-							</div>
-						</div>
-
-						<!-- Product -->
-						<div class="product">
-							<div class="product_image"><img src="images/product_6.jpg" alt=""></div>
-							<div class="product_content">
-								<div class="product_title"><a href="product.html">Смартфон</a></div>
-								<div class="product_price">$670</div>
-							</div>
-						</div>
-
-						<!-- Product -->
-						<div class="product">
-							<div class="product_image"><img src="images/product_7.jpg" alt=""></div>
-							<div class="product_content">
-								<div class="product_title"><a href="product.html">Смартфон</a></div>
-								<div class="product_price">$670</div>
-							</div>
-						</div>
-
-						<!-- Product -->
-						<div class="product">
-							<div class="product_image"><img src="images/product_8.jpg" alt=""></div>
-							<div class="product_content">
-								<div class="product_title"><a href="product.html">Смартфон</a></div>
-								<div class="product_price">$670</div>
+								<div class="product_title"><a href="product.html">Дизайн веб-сайта</a></div>
+								<div class="product_price">₽50,000</div>
 							</div>
 						</div>
 
