--- a/index.html
+++ b/index.html
@@ -198,39 +198,6 @@
 		</div>
 	</div>
 
-	<!-- Ads -->
-
-	<div class="avds">
-		<div class="avds_container d-flex flex-lg-row flex-column align-items-start justify-content-between">
-			<div class="avds_small">
-				<div class="avds_background" style="background-image:url(images/avds_small.jpg)"></div>
-				<div class="avds_small_inner">
-					<div class="avds_discount_container">
-						<img src="images/discount.png" alt="">
-						<div>
-							<div class="avds_discount">
-								<div>20<span>%</span></div>
-								<div>Скидка</div>
-							</div>
-						</div>
-					</div>
-					<div class="avds_small_content">
-						<div class="avds_title">Смартфоны</div>
-					</div>
-				</div>
-			</div>
-			<div class="avds_large">
-				<div class="avds_background" style="background-image:url(images/avds_large.jpg)"></div>
-				<div class="avds_large_container">
-					<div class="avds_large_content">
-						<div class="avds_title">Профессиональные камеры</div>
-						<div class="avds_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec molestie eros. Sed viver ra velit venenatis fermentum luctus.</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
 	<!-- Products -->
 
 	<div class="products">
@@ -242,7 +209,7 @@
 
 						<!-- Product -->
 						<div class="product">
-							<div class="product_image"><img src="images/product_1.jpg" alt=""></div>
+							<div class="product_image"><img src="images/product1.png" alt=""></div>
 							<div class="product_content">
 								<div class="product_title"><a href="product.html">Одностраничный сайт</a></div>
 								<div class="product_price">₽30,000</div>
@@ -251,7 +218,7 @@
 
 						<!-- Product -->
 						<div class="product">
-							<div class="product_image"><img src="images/product_2.jpg" alt=""></div>
+							<div class="product_image"><img src="images/product1.png" alt=""></div>
 							<div class="product_content">
 								<div class="product_title"><a href="product.html">Многостраничный сайт</a></div>
 								<div class="product_price">₽60,000</div>
@@ -283,7 +250,7 @@
 					<div class="avds_xl_container clearfix">
 						<div class="avds_xl_background" style="background-image:url(images/avds_xl.jpg)"></div>
 						<div class="avds_xl_content">
-							<div class="avds_title">Отличные устройства</div>
+							<div class="avds_title">Хороший дизайн</div>
 							<div class="avds_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus.</div>
 						</div>
 					</div>
@@ -297,7 +264,7 @@
 	<div class="icon_boxes">
 		<div class="container">
 			<div class="row icon_box_row">
-				
+
 				<!-- Icon Box -->
 				<div class="col-lg-4 icon_box_col">
 					<div class="icon_box">
@@ -312,10 +279,10 @@
 				<!-- Icon Box -->
 				<div class="col-lg-4 icon_box_col">
 					<div class="icon_box">
-						<div class="icon_box_image"><img src="images/icon_2.svg" alt=""></div>
-						<div class="icon_box_title">Бесплатный возврат</div>
+						<div class="icon_box_image"><img src="" alt=""></div>
+						<div class="icon_box_title"></div>
 						<div class="icon_box_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec molestie.</p>
+							<p></p>
 						</div>
 					</div>
 				</div>
@@ -376,7 +343,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
 						<div class="footer_social ml-lg-auto">
 							<ul>
-								<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+																<li><a href="https://www.pinterest.com/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+								<li><a href="https://www.instagram.com/?hl=ru"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+								<li><a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+								<li><a href="https://twitter.com/?lang=ru"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 								<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 								<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
