--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>MobilOchka</title>
+<title>Web-Studio</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Sublime project">
@@ -26,7 +26,7 @@
 				<div class="row">
 					<div class="col">
 						<div class="header_content d-flex flex-row align-items-center justify-content-start">
-							<div class="logo"><a href="#">MobilOchka.</a></div>
+							<div class="logo"><a href="#">Web-Studio.</a></div>
 							<nav class="main_nav">
 								<ul>
 									<li class="hassubs active">
@@ -37,7 +37,6 @@
 											<li><a href="contact.html">Контакты</a></li>
 										</ul>
 									</li>
-									<li><a href="#">Аксессуары</a></li>
 									<li><a href="#">Предложения</a></li>
 									<li><a href="contact.html">Контакты</a></li>
 								</ul>
@@ -94,7 +93,6 @@
 							<li class="page_menu_item menu_mm"><a href="contact.html">Контакты<i class="fa fa-angle-down"></i></a></li>
 						</ul>
 					</li>
-					<li class="page_menu_item menu_mm"><a href="index.html">Аксессуары<i class="fa fa-angle-down"></i></a></li>
 					<li class="page_menu_item menu_mm"><a href="#">Предложения<i class="fa fa-angle-down"></i></a></li>
 					<li class="page_menu_item menu_mm"><a href="contact.html">Контакты<i class="fa fa-angle-down"></i></a></li>
 				</ul>
@@ -337,7 +335,7 @@
 			<div class="row">
 				<div class="col">
 					<div class="footer_content d-flex flex-lg-row flex-column align-items-center justify-content-lg-start justify-content-center">
-						<div class="footer_logo"><a href="#">MobilOchka.</a></div>
+						<div class="footer_logo"><a href="#">Web-Studio.</a></div>
 						<div class="copyright ml-auto mr-auto"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i></a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
