--- a/product.html
+++ b/product.html
@@ -26,7 +26,7 @@
 				<div class="row">
 					<div class="col">
 						<div class="header_content d-flex flex-row align-items-center justify-content-start">
-							<div class="logo"><a href="#">MobilOchka.</a></div>
+							<div class="logo"><a href="#">Web-Studio.</a></div>
 							<nav class="main_nav">
 								<ul>
 									<li class="hassubs active">
@@ -37,7 +37,6 @@
 											<li><a href="contact.html">Контакты</a></li>
 										</ul>
 									</li>
-									<li><a href="#">Аксессуары</a></li>
 									<li><a href="#">Предложения</a></li>
 									<li><a href="contact.html">Контакты</a></li>
 								</ul>
@@ -94,7 +93,6 @@
 							<li class="page_menu_item menu_mm"><a href="contact.html">Контакты<i class="fa fa-angle-down"></i></a></li>
 						</ul>
 					</li>
-					<li class="page_menu_item menu_mm"><a href="index.html">Аксессуары<i class="fa fa-angle-down"></i></a></li>
 					<li class="page_menu_item menu_mm"><a href="#">Предложения<i class="fa fa-angle-down"></i></a></li>
 					<li class="page_menu_item menu_mm"><a href="contact.html">Контакты<i class="fa fa-angle-down"></i></a></li>
 				</ul>
@@ -124,6 +122,9 @@
 						<div class="col">
 							<div class="home_content">
 								<div class="home_title">Разработка<span>.</span></div>
+								<br>
+								<br>
+								<br>
 								<div class="home_text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec molestie eros. Sed viverra velit venenatis fermentum luctus.</p></div>
 							</div>
 						</div>
@@ -225,7 +226,7 @@
 			<div class="row">
 				<div class="col">
 					<div class="footer_content d-flex flex-lg-row flex-column align-items-center justify-content-lg-start justify-content-center">
-						<div class="footer_logo"><a href="#">MobilOchka.</a></div>
+						<div class="footer_logo"><a href="#">Web-Studio.</a></div>
 						<div class="copyright ml-auto mr-auto"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i></a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
