--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
 
 	<div class="home">
 		<div class="home_container">
-			<div class="home_background" style="background-image:url(images/contact.jpg)"></div>
+			<div class="home_background" style="background-image:url(images/black.png)"></div>
 			<div class="home_content_container">
 				<div class="container">
 					<div class="row">
@@ -199,20 +199,6 @@
 					</div>
 				</div>
 			</div>
-			<div class="row map_row">
-				<div class="col">
-
-					<!-- Google Map -->
-					<div class="map">
-						<div id="google_map" class="google_map">
-							<div class="map_container">
-								<div id="map"></div>
-							</div>
-						</div>
-					</div>
-
-				</div>
-			</div>
 		</div>
 	</div>
 
@@ -256,7 +242,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <script src="plugins/greensock/animation.gsap.min.js"></script>
 <script src="plugins/greensock/ScrollToPlugin.min.js"></script>
 <script src="plugins/easing/easing.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCIwF204lFZg1y4kPSIhKaHEXMLYxxuMhA"></script>
 <script src="js/contact.js"></script>
 </body>
 </html>
