--- a/product.html
+++ b/product.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Product</title>
+<title>Товар</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Sublime project">
@@ -33,7 +33,6 @@
 										<a href="index.html">Домой</a>
 										<ul>
 											<li><a href="product.html">Продукты</a></li>
-											<li><a href="checkout.html">Оплата</a></li>
 											<li><a href="contact.html">Контакты</a></li>
 										</ul>
 									</li>
@@ -89,7 +88,6 @@
 						<a href="index.html">Домой<i class="fa fa-angle-down"></i></a>
 						<ul class="page_menu_selection menu_mm">
 							<li class="page_menu_item menu_mm"><a href="product.html">Продукты<i class="fa fa-angle-down"></i></a></li>
-							<li class="page_menu_item menu_mm"><a href="checkout.html">Оплата<i class="fa fa-angle-down"></i></a></li>
 							<li class="page_menu_item menu_mm"><a href="contact.html">Контакты<i class="fa fa-angle-down"></i></a></li>
 						</ul>
 					</li>
